--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
         </div>
     </section>
 
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/image2.png" alt="image2">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/company/programminghero/">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+
 
 </body>
 
